--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+@import 'variables';
+@import './components/tours/Tours.scss';
+@import './components/navbar/Navbar.scss';
+
 * {
   outline: none !important;
   box-sizing: border-box !important;
@@ -25,20 +29,19 @@
 }
 
 .App-header {
-  /* background-color: #282c34; */
   display: flex;
   flex-direction: column;
-  /* align-items: center;
-  justify-content: center; */
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: $white-color;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-.App-main {}
+.App-main {
+  padding: 60px 5px 60px 5px;
+}
 
 @keyframes App-logo-spin {
   from {
@@ -48,72 +51,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-// Colors
-
-$primary-color: #C8102E;
-$recommended-color: #298888;
-$point-interest: #9208AC;
-$grey: #707070;
-$light-grey: #ECECEC;
-$grey-text: #9E9E9E;
-$-webkit-box-shadow: 0px 1px 7px 0px rgba(0, 0, 0, 0.16);
-$-moz-box-shadow: 0px 1px 7px 0px rgba(0, 0, 0, 0.16);
-$box-shadow: 0px 1px 7px 0px rgba(0, 0, 0, 0.16);
-
-// Navbar
-
-.appy-- {
-
-  &navbar {
-    display: flex;
-    padding-left: 18px;
-    background-color: white;
-    height: 60px;
-    align-items: center;
-    justify-content: space-between;
-    -webkit-box-shadow: $-webkit-box-shadow;
-    -moz-box-shadow: $-moz-box-shadow;
-    box-shadow: $box-shadow;
-
-    &-brand {
-      color: $primary-color;
-    }
-  }
-
-  &search {
-
-    &-form {
-      position: relative;
-      padding-right: 18px;
-    }
-
-    &-input {
-      padding-right: 35px;
-      padding-left: 10px;
-      width: 80vw;
-      border-radius: 4px;
-      border: 1px solid $light-grey;
-      height: 36px;
-      color: $grey-text;
-
-      &::placeholder {
-        color: $grey-text
-      }
-    }
-
-    &-icon-location {
-      color: $grey;
-      opacity: .5;
-      border: 0px;
-      background-color: transparent;
-      font-size: 20px;
-      position: absolute;
-      right: 20px;
-      top: 2px;
-    }
-
-  }
-
 }
