--- a/src/components/common/Common.scss
+++ b/src/components/common/Common.scss
@@ -137,3 +137,10 @@
         }
     }
 }
+
+// React Slick
+
+.slick-dots li.slick-active button:before {
+    opacity: .75;
+    color: $primary-color !important;
+}
