--- a/src/components/places/Places.scss
+++ b/src/components/places/Places.scss
@@ -9,7 +9,7 @@
             background-color: $white-color;
             border-bottom-left-radius: 4px;
             border-bottom-right-radius: 4px;
-            margin-bottom: 10px;
+            margin-top: 55px;
 
             &-map {
                 height: 215px;
@@ -17,7 +17,6 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                margin-top: 60px;
                 border-top-left-radius: 4px;
                 border-top-right-radius: 4px;
 
@@ -88,5 +87,145 @@
             }
         }
 
+        &-list {
+
+            &-item {
+                margin-top: 20px;
+                margin-right: 0px;
+                margin-left: 0px;
+                border-radius: 5px;
+                position: relative;
+                background-color: $white-color;
+
+                &-img {
+                    width: 100px;
+                    border-radius: 5px;
+                    background-position: center;
+                    background-size: cover;
+                    position: absolute;
+                    top: 0px;
+                    left: 0px;
+                    height: 100%;
+
+                    &-col {
+                        padding-right: 90px;
+                    }
+                }
+
+                &-recommended {
+                    color: white;
+                    position: absolute;
+                    display: flex;
+                    top: 5px;
+                    left: 5px;
+                    background-color: $recommended-color;
+                    padding: 3px;
+                    border-radius: 3px;
+                }
+
+                &-rating {
+                    background-color: #c8102ebf;
+                    border-radius: 5px;
+                    display: flex;
+                    position: absolute;
+                    bottom: 0px;
+                    width: 100%;
+                    align-items: center;
+                    justify-content: center;
+                    padding: 5px 10px;
+
+                    &>img {
+                        width: 10px;
+                        height: 10px;
+                    }
+
+                    &-num {
+                        color: $white-color;
+                    }
+                }
+
+                &-info {
+                    padding: 10px;
+                    border-bottom-left-radius: 5px;
+                    border-bottom-right-radius: 5px;
+
+                    &-title {
+                        font-size: 14px;
+                        margin-bottom: 0px;
+                    }
+
+                    &-description {
+                        font-size: 10px;
+                        font-weight: 100;
+                        margin-bottom: 5px;
+                    }
+                }
+
+                &-schedule-price {
+                    flex-wrap: nowrap;
+                    height: 20px;
+                    margin-left: 0px;
+
+                    &-schedule-info {
+                        padding: 0px 10px;
+                        margin-top: -1px;
+                        font-size: 14px;
+                        font-weight: bold;
+                    }
+
+                    &-price-info {
+                        display: flex;
+                        justify-content: flex-start;
+                        margin: 5px 0px;
+                        margin-top: 5px;
+                        margin-left: 0px;
+                        margin-top: -1px;
+                        align-items: baseline;
+                        margin-left: 12px;
+                        padding: 0px;
+                    }
+
+                    &-open-icon {
+                        display: flex;
+                        justify-content: right;
+                        color: #FFBB00;
+                        padding: 0px;
+                    }
+
+                    &-price-icon {
+                        height: 16px;
+                        margin-top: -8px;
+                    }
+                }
+
+                &-position {
+                    width: 100%;
+                    justify-content: center;
+                    display: flex;
+                    padding: 0px 10px 0 0px;
+                    margin-right: -15px;
+                    align-items: center;
+
+                    &-num {
+                        position: absolute;
+                        padding-left: 2px;
+                        font-weight: bold;
+                        padding-top: 5px;
+                        width: 55px;
+                        text-align: center;
+                        font-size: 45px;
+                        color: $primary-color;
+                        display: flex;
+                        height: 55px;
+                        align-items: center;
+                        margin-top: 0px;
+                        margin-left: -27px;
+                        justify-content: center;
+                        margin-top: 18px;
+                        margin-left: 0px;
+                    }
+                }
+            }
+        }
     }
 }
