--- a/src/variables.scss
+++ b/src/variables.scss
@@ -55,7 +55,7 @@ $icon-button: 14px;
 }
 
 .recommended {
-    background-color: $recommended-color;
+    background-color: $recommended-color !important;
 }
 
 // Brand
