--- a/src/components/common/Common.scss
+++ b/src/components/common/Common.scss
@@ -7,9 +7,44 @@
         flex-wrap: wrap;
     }
 
+    &col-1 {
+        flex: 0 0 8.333333%;
+        max-width: 8.333333%;
+    }
+
+    &col-2 {
+        flex: 0 0 16.666667%;
+        max-width: 16.666667%;
+    }
+
+    &col-3 {
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
+
+    &col-4 {
+        flex: 0 0 33.333333%;
+        max-width: 33.333333%;
+    }
+
+    &col-5 {
+        flex: 0 0 41.666667%;
+        max-width: 41.666667%;
+    }
+
     &col-6 {
         flex: 0 0 50%;
         max-width: 50%;
+    }
+
+    &col-7 {
+        flex: 0 0 58.333333%;
+        max-width: 58.333333%;
+    }
+
+    &col-8 {
+        flex: 0 0 66.666667%;
+        max-width: 66.666667%;
     }
 
     &second-col div.appy--place-item-info-schedule-hours {
@@ -34,7 +69,7 @@
         min-width: 31px;
 
         &-info {
-            padding: 1px 7px 0 9px !important;
+            padding: 1px 8px 0 9px !important;
         }
 
         &-icon {
@@ -143,100 +178,4 @@
         align-items: center;
         height: 100vh;
     }
-}
-
-// React Slick
-
-.slick-dots li.slick-active button:before {
-    color: $primary-color !important;
-}
-
-
-/* Dots */
-
-.slick-dotted.slick-slider {
-    margin-bottom: 30px;
-}
-
-.recommended-dots {
-    position: absolute;
-    bottom: -25px;
-
-    display: block;
-
-    width: 100%;
-    padding: 0;
-    margin: 0;
-
-    list-style: none;
-
-    text-align: center;
-}
-
-.recommended-dots li {
-    position: relative;
-
-    display: inline-block;
-
-    width: 20px;
-    height: 20px;
-    margin: 0 5px;
-    padding: 0;
-
-    cursor: pointer;
-}
-
-.recommended-dots li button {
-    font-size: 0;
-    line-height: 0;
-
-    display: block;
-
-    width: 20px;
-    height: 20px;
-    padding: 5px;
-
-    cursor: pointer;
-
-    color: transparent;
-    border: 0;
-    outline: none;
-    background: transparent;
-}
-
-.recommended-dots li button:hover,
-.recommended-dots li button:focus {
-    outline: none;
-}
-
-.recommended-dots li button:hover:before,
-.recommended-dots li button:focus:before {
-    opacity: 1;
-}
-
-.recommended-dots li button:before {
-    font-family: 'slick';
-    font-size: 6px;
-    line-height: 20px;
-
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    width: 20px;
-    height: 20px;
-
-    content: '•';
-    text-align: center;
-
-    opacity: .25;
-    color: $recommended-color;
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-.recommended-dots li.slick-active button:before {
-    opacity: .75;
-    color: $recommended-color;
 }
