--- a/src/components/tours/Tours.scss
+++ b/src/components/tours/Tours.scss
@@ -185,5 +185,23 @@
                 }
             }
         }
+
+        &-detail {
+            background-color: $white-color;
+            border-bottom-left-radius: 4px;
+            border-bottom-right-radius: 4px;
+            margin-top: 55px;
+
+            &-map {
+                height: 422px;
+                background-color: $grey-text;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-top-left-radius: 4px;
+                border-top-right-radius: 4px;
+
+            }
+        }
     }
 }
