--- a/src/components/places/Places.scss
+++ b/src/components/places/Places.scss
@@ -95,11 +95,11 @@
                 margin-left: 0px;
                 border-radius: 5px;
                 position: relative;
-                background-color: $white-color;
+                border: 1px solid $light-grey;
 
                 &-img {
                     width: 25%;
-                    border-radius: 5px;
+                    border-radius: 5px 0px 0px 5px;
                     background-position: center;
                     background-size: cover;
                     position: absolute;
@@ -149,7 +149,7 @@
                 }
 
                 &-info {
-                    padding: 10px 0px 10px 15px;
+                    padding: 5px 0px 0px 15px;
                     border-bottom-left-radius: 5px;
                     border-bottom-right-radius: 5px;
                     text-align: left;
@@ -158,12 +158,16 @@
                     &-title {
                         font-size: $text-icons;
                         margin-bottom: 0px;
+                        font-weight: normal;
                     }
 
                     &-description {
                         font-size: 10px;
                         font-weight: 100;
                         margin-bottom: 5px;
+                        height: 20px;
+                        line-height: 14px;
+                        margin-bottom: 15px;
                     }
                 }
 
@@ -174,10 +178,10 @@
                     margin-top: 10px;
 
                     &-schedule-info {
-                        padding: 0px 5px;
+                        padding: 0px;
                         margin-top: -1px;
-                        font-size: 14px;
-                        font-weight: bold;
+                        font-size: $text-bars;
+                        font-weight: normal;
                         color: $text-open;
                     }
 
@@ -189,24 +193,26 @@
                         margin-left: 0px;
                         margin-top: -1px;
                         align-items: baseline;
-                        margin-left: 12px;
+                        margin-left: 7px;
                         padding: 0px;
+                        font-size: $text-menu;
                     }
 
                     &-open-icon {
                         display: flex;
                         justify-content: right;
-                        color: $light-grey;
+                        color: $grey-text;
                         padding: 0px;
+                        font-size: $icon-button;
                     }
 
                     &-price-icon {
                         height: 16px;
-                        margin-top: -8px;
-                        font-style: 16px;
+                        margin-top: -9px;
+                        font-style: $text-bars;
 
                         &>img {
-                            width: 20px;
+                            width: 18px;
                             margin-top: 9px;
                         }
                     }
@@ -224,11 +230,11 @@
                     &-num {
                         position: absolute;
                         padding-left: 2px;
-                        font-weight: bold;
+                        font-weight: normal;
                         padding-top: 5px;
                         width: 55px;
                         text-align: center;
-                        font-size: 45px;
+                        font-size: 40px;
                         color: $primary-color;
                         display: flex;
                         height: 55px;
