--- a/src/App.scss
+++ b/src/App.scss
@@ -14,9 +14,9 @@
   text-align: center;
   min-height: 100vh;
   background: rgb(255, 255, 255);
-  background: -moz-linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 234, 173, 1) 100%);
-  background: -webkit-linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 234, 173, 1) 100%);
-  background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 234, 173, 1) 100%);
+  // background: -moz-linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 234, 173, 1) 100%);
+  // background: -webkit-linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 234, 173, 1) 100%);
+  // background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 234, 173, 1) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffffff", endColorstr="#ffeaad", GradientType=1);
 }
 
