--- a/src/components/tours/Tours.scss
+++ b/src/components/tours/Tours.scss
@@ -265,6 +265,22 @@
                     padding-top: 5px;
                 }
             }
+
+            &-share {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                &>img {
+                    width: 20px;
+                }
+
+                &-buttons {
+                    display: flex;
+                    align-items: center;
+                    justify-content: flex-end;
+                }
+            }
         }
     }
 }
