--- a/src/variables.scss
+++ b/src/variables.scss
@@ -75,6 +75,17 @@ $icon-button: 14px;
     color: $recommended-color !important;
 }
 
+.whatsapp-btn {
+    border-color: #23D366 !important;
+    color: #23D366 !important;
+}
+
+.facebook-btn {
+    border-color: #1A77F2 !important;
+    color: #1A77F2 !important;
+}
+
+
 .primary-btn {
     border-color: $primary-color;
 }
