--- a/src/components/common/Common.scss
+++ b/src/components/common/Common.scss
@@ -91,6 +91,10 @@
             font-size: 16px;
             font-weight: bold;
         }
+
+        &-brand {
+            width: 10px;
+        }
     }
 
     &image {
