--- a/src/variables.scss
+++ b/src/variables.scss
@@ -78,11 +78,19 @@ $icon-button: 14px;
 .whatsapp-btn {
     border-color: #23D366 !important;
     color: #23D366 !important;
+    padding: 0px !important;
 }
 
 .facebook-btn {
     border-color: #1A77F2 !important;
     color: #1A77F2 !important;
+    padding: 0px !important;
+}
+
+.twitter-btn {
+    border-color: #1C91DA !important;
+    color: #1C91DA !important;
+    padding: 0px !important;
 }
 
 
