--- a/src/components/infobar/InfoBar.scss
+++ b/src/components/infobar/InfoBar.scss
@@ -27,12 +27,22 @@
         &-icon {
             padding-right: 10px;
         }
+
+        &-back {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            width: 50%;
+        }
     }
 
     &buttons-info {
-        width: -webkit-fill-available;
+        width: 50%;
         display: flex;
         justify-content: flex-end;
         align-items: center;
     }
+
+
 }
