--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -23,10 +23,10 @@ body *::before {
   box-sizing: border-box;
 }
 
-body {
-  background-image: -webkit-linear-gradient(top, #f2f2f2, #e6e6e6);
-  background-image: linear-gradient(top, #f2f2f2, #e6e6e6);
-}
+// body {
+//   background-image: -webkit-linear-gradient(top, #f2f2f2, #e6e6e6);
+//   background-image: linear-gradient(top, #f2f2f2, #e6e6e6);
+// }
 
 h1 {
   font-size: 2rem;
