--- a/src/components/places/Places.scss
+++ b/src/components/places/Places.scss
@@ -250,6 +250,7 @@
                         justify-content: center;
                         margin-top: 18px;
                         margin-left: 0px;
+                        margin-right: 2px;
                     }
                 }
 
