--- a/src/components/places/Places.scss
+++ b/src/components/places/Places.scss
@@ -24,7 +24,7 @@
 
             &-info {
                 padding: 10px 10px 15px 10px;
-                text-align-last: left;
+                text-align: left;
 
 
 
