--- a/src/App.scss
+++ b/src/App.scss
@@ -61,3 +61,12 @@ a {
     transform: rotate(360deg);
   }
 }
+
+main {
+  padding: 0;
+}
+
+.leaflet-container {
+  width: 100%;
+  height: 100%;
+}
