--- a/src/components/places/placesmap/PlacesMap.scss
+++ b/src/components/places/placesmap/PlacesMap.scss
@@ -7,7 +7,6 @@ main {
   height: 100%;
 }
 
-
 .restaurant-popup h3 {
   font-size: 1.4em;
   margin-bottom: .4em;
@@ -25,4 +24,30 @@ main {
 
 .restaurant-popup li:last-child {
   margin-bottom: 0;
+}
+
+.search-actions {
+  text-align: center;
+  background-color: var(--launchtime-purple);
+}
+
+.search-actions ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.search-actions li {
+  border-right: solid 1px var(--launchtime-purple);
+  border-left: solid 1px var(--launchtime-purple);
+}
+
+.search-actions button {
+  color: white;
+  font-weight: bold;
+  background-color: var(--launchtime-cyan);
+  border: 0;
+  padding: .8em 1em;
 }
