--- a/src/components/infobar/InfoBar.scss
+++ b/src/components/infobar/InfoBar.scss
@@ -26,12 +26,13 @@
 
         &-icon {
             padding-right: 10px;
+            padding-left: 10px;
         }
 
         &-back {
             display: flex;
             flex-direction: row;
-            justify-content: center;
+            justify-content: left;
             align-items: center;
             width: 50%;
         }
