--- a/src/components/places/Places.scss
+++ b/src/components/places/Places.scss
@@ -10,6 +10,9 @@
             border-bottom-left-radius: 4px;
             border-bottom-right-radius: 4px;
             margin-top: 55px;
+            position: absolute;
+            width: calc(100% - 10px);
+            top: 300px;
 
             &-map {
                 height: 290px;
@@ -20,13 +23,22 @@
                 border-top-left-radius: 4px;
                 border-top-right-radius: 4px;
 
+                &-infowindow {
+
+                    &-title {
+                        font-size: 14px;
+                    }
+
+                    &-address {
+                        font-size: 10px;
+                    }
+                }
+
             }
 
             &-info {
                 padding: 10px 10px 15px 10px;
                 text-align: left;
-
-
 
                 &-placename {
                     font-size: $text-info-title;
