--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -28,20 +28,24 @@ body *::before {
 //   background-image: linear-gradient(top, #f2f2f2, #e6e6e6);
 // }
 
-h1 {
+.login-container>h1 {
   font-size: 2rem;
   text-align: center;
-  margin: 0 0 2em;
+  margin: 0 0 0em;
 }
 
 .login-container {
   position: relative;
   max-width: 40rem;
-  margin: 3rem auto;
+  margin: 1rem auto;
   background: #fff;
   width: 100%;
   padding: 10px 15px 0;
   border-radius: 1px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .container::before {
@@ -416,13 +420,13 @@ fieldset {
   border: 1px solid currentColor;
   font-size: 1.1rem;
   color: $primary-color;
-  margin: 3rem 0;
+  margin: 2rem 0;
   padding: 0.75rem 3rem;
   cursor: pointer;
   -webkit-transition: background-color 0.28s ease, color 0.28s ease, box-shadow 0.28s ease;
   transition: background-color 0.28s ease, color 0.28s ease, box-shadow 0.28s ease;
   overflow: hidden;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .button span {
