--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -329,6 +329,7 @@ fieldset {
   border-radius: 0.0625rem;
   -webkit-transition: border-color 0.28s ease;
   transition: border-color 0.28s ease;
+  margin-top: 3px;
 }
 
 .checkbox .helper::before,
