--- a/src/variables.scss
+++ b/src/variables.scss
@@ -48,6 +48,10 @@ $icon-button: 14px;
     &primary-bg {
         background-color: $primary-color;
     }
+
+    &white-color {
+        color: $white-color;
+    }
 }
 
 .recommended-color {
