--- a/src/components/places/Places.scss
+++ b/src/components/places/Places.scss
@@ -77,6 +77,7 @@
                         justify-content: flex-end;
                         text-align: right;
                         color: $grey-text;
+                        padding-right: 5px;
                     }
 
                     &-container {
