add place on tour

--- a/src/components/infobar/InfoBar.scss
+++ b/src/components/infobar/InfoBar.scss
@@ -39,10 +39,14 @@
     }
 
     &buttons-info {
-        width: 50%;
+        // width: 50%;
         display: flex;
         justify-content: flex-end;
         align-items: center;
+    }
+
+    &search-place {
+        height: 31px;
     }
 
 
