--- a/src/components/addplaces/Addplaces.scss
+++ b/src/components/addplaces/Addplaces.scss
@@ -3,6 +3,10 @@
 .appy-- {
 
     &addplace {
-        margin-top: 260px;
+        margin-top: 300px;
     }
+}
+
+.search-location-input {
+    margin-top: 55px;
 }
