--- a/src/components/nearest/NearbyList.scss
+++ b/src/components/nearest/NearbyList.scss
@@ -21,8 +21,9 @@
             background: #fff;
             border: 2px solid #4611a7;
             letter-spacing: 0.5px;
-            transition: all .3s cubic-bezier(0,0,.2,1);
+            transition: all .3s cubic-bezier(0, 0, .2, 1);
             box-sizing: border-box;
+
 
             &:hover {
                 color: #fff;
@@ -46,7 +47,7 @@
             background-color: #fff;
             border-radius: 10px;
             box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.05);
-            transition: all .3s cubic-bezier(0,0,.2,1);
+            transition: all .3s cubic-bezier(0, 0, .2, 1);
 
             img {
                 width: 100%;
@@ -71,7 +72,8 @@
                         margin-right: 5px;
                     }
 
-                    .all-reviews, .add-review {
+                    .all-reviews,
+                    .add-review {
                         font-size: 0.9rem;
                         cursor: pointer;
                         transition: all 300ms ease;
@@ -91,19 +93,19 @@
                         color: #4611a7;
                         text-decoration: underline;
                         opacity: 0.7;
-                        
+
                         &:hover {
                             opacity: 1;
                         }
                     }
                 }
-    
+
                 .info {
                     list-style: none;
-    
+
                     li {
                         margin-bottom: 0.5rem;
-    
+
                         i {
                             margin-right: 0.25rem;
                             opacity: 0.3;
@@ -122,4 +124,8 @@
             }
         }
     }
+}
+
+#map {
+    margin-top: 5px;
 }
