--- a/src/components/places/Places.scss
+++ b/src/components/places/Places.scss
@@ -40,8 +40,9 @@
 
             }
 
+
             &-info {
-                padding: 10px 10px 80px 10px;
+                padding: 10px 10px 77px 10px;
                 text-align: left;
 
                 &-placename {
@@ -112,6 +113,7 @@
                 border-radius: 5px;
                 position: relative;
                 border: 1px solid $light-grey;
+                background-color: #fffffff0;
 
                 &-img {
                     width: 100%;
@@ -321,4 +323,17 @@
             }
         }
     }
+}
+
+//NearBy 
+
+.sidebar .places {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 0 !important;
+    height: auto !important;
+    padding: 0 !important;
+    overflow-y: scroll;
+    background: #fff;
+    box-sizing: border-box;
 }
