--- a/src/components/tours/Tours.scss
+++ b/src/components/tours/Tours.scss
@@ -13,7 +13,9 @@
             margin-top: 15px;
             justify-content: space-between;
             margin-bottom: 10px;
-            padding: 0 0 0 2px;
+            // padding: 0 0 0 2px;
+            margin-left: 5px;
+
 
             &-title {
                 display: flex;
@@ -22,13 +24,27 @@
 
                 &-icon {
                     font-size: $icons;
-                    margin-top: -2px;
+                    // margin-top: -2px;
+                    border: 1px solid;
+                    border-radius: 4px;
+                    padding: 6px;
+                    height: 31px;
+                    width: 31px !important;
+                    margin-top: 0px;
+                    /* margin-left: 5px; */
+                    color: white;
+                    background-color: $primary-color;
+
+                    & .recommended {
+                        background-color: $recommended-color !important;
+                    }
                 }
 
                 &-title {
                     margin-bottom: 0px;
                     padding-left: 10px;
-                    font-size: 18px;
+                    font-size: 22px;
+                    font-weight: 300;
                 }
             }
 
@@ -38,6 +54,7 @@
                 align-items: center;
                 font-size: $text-icons;
                 color: $primary-color;
+                margin-right: 5px;
 
                 &-num {
                     padding: 1px 1px 0 0px;
