--- a/src/components/tours/Tours.scss
+++ b/src/components/tours/Tours.scss
@@ -210,7 +210,9 @@
             background-color: $white-color;
             border-bottom-left-radius: 4px;
             border-bottom-right-radius: 4px;
-            margin-top: 55px;
+            margin: 50px -5px 0 -5px;
+            border-bottom: 1px solid $light-grey;
+            border-top: 1px solid $light-grey;
 
             &-info {
                 padding: 15px 10px 15px 10px;
